--- a/BP/manifest.json
+++ b/BP/manifest.json
@@ -2,7 +2,9 @@
 	"format_version": 2,
 	"metadata": {
 		"authors": [
-			"Caputino"
+			"Caputino_Oficial",
+			"TheLuke013",
+			"Segio"
 		],
 		"generated_with": {
 			"bridge": [
